router/service-router.yaml
apiVersion: v1
kind: Service
metadata:
  name: router
  namespace: router
spec:
  type: ExternalName
  externalName: 192.168.1.1
